--- a/formatter/templates/flight.split.kml.cs.xml
+++ b/formatter/templates/flight.split.kml.cs.xml
@@ -1,30 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Document>
-    <Style id="hideChildren">
-        <ListStyle>
-            <listItemType>checkHideChildren</listItemType>
-        </ListStyle>
-    </Style>
     <open>1</open>
     <name>Parts</name>
     <?cs each:track = tracks ?>
-    <Placeholder>
+    <Placemark>
         <name>Part: <?cs name:track ?></name>
         <open>0</open>
-        <styleUrl>#hideChildren</styleUrl>
+        <Style>
+            <LineStyle>
+                <color><?cs var:track.colour ?></color>
+                <width>2</width>
+            </LineStyle>
+        </Style>
         <LineString>
-            <Style>
-                <LineStyle>
-                    <color><?cs var:track.colour ?></color>
-                    <width>2</width>
-                </LineStyle>
-            </Style>
             <extrude>0</extrude>
             <altitudeMode>absolute</altitudeMode>
             <coordinates>
                 <?cs each:p = track.points ?><?cs var:p.lng ?>,<?cs var:p.lat ?>,<?cs var:p.ele ?> <?cs /each ?>
             </coordinates>
         </LineString>
-    </Placeholder>
+    </Placemark>
     <?cs /each ?>
 </Document>
